<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetarSenhaActivity">

    <include
        layout="@layout/include_toolbar" />

    <EditText
        android:id="@+id/activity_resetar_senha_edt_email"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/activity_resetar_senha_str_hint_email"
        app:layout_constraintBottom_toTopOf="@+id/activity_resetar_senha_btn_enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_resetar_senha_btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="172dp"
        android:background="@color/RGB00701a"
        android:textColor="@color/RGBffffff"
        android:text="@string/activity_resetar_senha_str_btn_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/activity_resetar_senha_str_txt_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_resetar_senha_edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>